--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ DEOKONAI_UPDATE_REPOSITORY_TYPE = github
 
 APP_ENV=local
 APP_DEBUG=true
+APP_KEY=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
