--- a/.env.example
+++ b/.env.example
@@ -7,16 +7,20 @@ DB_DATABASE=deokonai
 DB_USERNAME=root
 DB_PASSWORD=
 
-DEOKONAI_UPDATE_REPOSITORY_OWNER = Mathsyo
-DEOKONAI_UPDATE_REPOSITORY_NAME = Deokonai
-DEOKONAI_UPDATE_REPOSITORY_TYPE = github
+DEOKONAI_UPDATE_REPOSITORY_OWNER=Mathsyo
+DEOKONAI_UPDATE_REPOSITORY_NAME=Deokonai
+DEOKONAI_UPDATE_REPOSITORY_TYPE=github
+DEOKONAI_INSTALLED=false
 
 
 
 
-APP_ENV=local
+APP_ENV=production
 APP_DEBUG=true
-APP_KEY=
+APP_URL=http://localhost
+APP_TIMEZONE=UTC
+APP_LOCALE=en
+APP_KEY=base64:hmU1T3OuvHdi5t1wULI8Xp7geI+JIWGog9pBCNxslY8=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
