--- a/package.json
+++ b/package.json
@@ -10,17 +10,27 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.10.2",
+        "@fortawesome/fontawesome-free": "^5.15.2",
+        "@simonwep/pickr": "^1.8.0",
+        "autosize": "^4.0.2",
         "axios": "^0.21",
-        "bootstrap": "^5.1.3",
+        "chart.js": "^2.9.4",
+        "clipboard": "^2.0.6",
+        "easymde": "^2.14.0",
+        "flatpickr": "^4.6.9",
+        "jquery": "^3.5.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "popper.js": "^1.16.1",
+        "postcss": "^8.2.6",
+        "sass": "^1.32.7",
+        "sass-loader": "^8.0.0",
+        "sortablejs": "^1.13.0",
+        "startbootstrap-sb-admin-2": "^4.1.3",
+        "tinymce": "^5.7.0"
     },
     "dependencies": {
+        "bootstrap": "^5.1.3",
         "bootstrap-icons": "^1.7.2"
     }
 }
